add buttons, sale messages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1861,6 +1861,9 @@ section.lazy-placeholder:after {
   padding-bottom: 60px;
   background-color: #ffffff;
 }
+.cid-s0PEvqLcwB .form-block{
+  padding-top: 4rem;
+}
 .cid-s0PEvqLcwB *:focus {
   outline: none;
 }
