--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -7,6 +7,9 @@
 body {
   font-family: Rubik;
 }
+.shadowed_text{
+  text-shadow: 1px 1px 2px black, 0 0 1em black;
+}
 .display-1 {
   font-family: 'Rubik', sans-serif;
   font-size: 3.6rem;
